fix overlapping text in covid message

--- a/scss/ee.css
+++ b/scss/ee.css
@@ -322,7 +322,6 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: darken;
   background-size: cover;
-  overflow: hidden;
   border-bottom: 0.5em solid white;
   display: grid;
   justify-content: center;
@@ -330,7 +329,7 @@ body {
   font-size: 1em;
   color: #222; }
   .covid-news .covid-text {
-    margin: 0px 20px 20px 20px; }
+    padding: 0px 20px 20px 20px; }
   .covid-news p {
     margin-top: 0;
     color: white;
